# banking-project-using-django-and-python

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
mysite/: admin.py  models.py  settings.py  urls.py  views.py
mysite/migrations/: 0001_initial.py  0002_invm.py  0003_glif.py
mysite/static/css/: cardview.css  dispinf.css  main.css  style.css
mysite/template/: createcusm.html  developer.html  dispaccdetails.html  dispinfo.html  drawdep.html  fdaccount.html  index.html  main.html  opsavings.html  othertran.html  passbook.html  selectaccforpass.html  selftran.html
